styled form areas of the app

--- a/index.css
+++ b/index.css
@@ -22,10 +22,33 @@ body {
     font-weight: 700;
 }
 
-h3,
 img,
 p {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.form-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10vh;
+}
+
+.form-container > form > label {
+    margin-right: 5px;
+    font-size: 1.2rem;
+}
+
+.form-container > form > input {
+    height: 2rem;
+    width: 15rem;
+    padding: 0rem 1rem;
+}
+
+.form-container > form > button {
+    height: 2.2rem;
+    width: 5rem;
+    font-size: 1rem;
 }
